--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,15 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "apollo-cache-inmemory": "~1.6.5",
+    "apollo-client": "~2.6.8",
+    "apollo-link": "~1.2.13",
+    "apollo-link-http": "~1.5.16",
+    "apollo-link-ws": "~1.0.19",
+    "apollo-utilities": "~1.3.3",
+    "graphql": "~14.5.8",
+    "graphql-tag": "~2.10.1",
+    "sirv-cli": "^0.4.4",
+    "svelte-apollo": "~0.3.0"
   }
 }
