--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,16 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "@smui/floating-label": "~1.0.0-beta.19",
+    "@smui/line-ripple": "~1.0.0-beta.19",
+    "@smui/textfield": "~1.0.0-beta.19",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-postcss": "~2.0.3",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
+    "sass": "~1.24.0",
     "svelte": "^3.0.0"
   },
   "dependencies": {
