--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@smui/floating-label": "~1.0.0-beta.19",
+    "@smui/form-field": "~1.0.0-beta.19",
     "@smui/line-ripple": "~1.0.0-beta.19",
+    "@smui/switch": "~1.0.0-beta.19",
     "@smui/textfield": "~1.0.0-beta.19",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
