Add save button, loose the await inside WhiteList, since bind does not work with #await

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "@smui/button": "~1.0.0-beta.19",
     "@smui/floating-label": "~1.0.0-beta.19",
     "@smui/form-field": "~1.0.0-beta.19",
     "@smui/line-ripple": "~1.0.0-beta.19",
