--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "graphql": "~14.5.8",
     "graphql-redis-subscriptions": "~2.1.2",
     "graphql-subscriptions": "~1.1.0",
-    "ioredis": "~4.14.1"
+    "ioredis": "~4.14.1",
+    "uuid": "~3.3.3"
   },
   "devDependencies": {
     "nodemon": "~2.0.2"
