--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@smui/button": "~1.0.0-beta.19",
+    "@smui/fab": "~1.0.0-beta.19",
     "@smui/floating-label": "~1.0.0-beta.19",
     "@smui/form-field": "~1.0.0-beta.19",
+    "@smui/icon-button": "~1.0.0-beta.19",
     "@smui/line-ripple": "~1.0.0-beta.19",
     "@smui/switch": "~1.0.0-beta.19",
     "@smui/textfield": "~1.0.0-beta.19",
