--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "sass": "~1.24.0",
-    "svelte": "^3.0.0",
+    "svelte": "~3.18.0",
     "svelte-preprocess": "~3.3.0"
   },
   "dependencies": {
